@@ -1,3 +1,8 @@
+2005-11-02  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* UnixServerChannel.cs: Use Mono.Unix.Native.Syscall.  Mono.Unix.Syscall is
+	  obsolete, and will eventually disappear.
+
 2005-10-18  Robert Jordan  <robertj@gmx.net>
 
 	* UnixChannel.cs: fixed ParseUnixURL to support channel URLs (those
